--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+    --fonte0: Verdana, Geneva, Tahoma, sans-serif; 
+    --fonte1: 'Passion One', cursive;
+    --fonte2: 'Sriracha', cursive;
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -8,6 +18,7 @@
 html, body{
     min-height: 100vh;
     background-color: gray;
+    font-family: var(--fonte0);
 }
 
 header{
@@ -19,6 +30,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte1);
+    font-size: 10vw;
 }
 
 header > p{
@@ -36,20 +49,40 @@ a:hover{
 }
 
 section{
-    padding: 20px 0px 20px 30px;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+    font-family: var(--fonte2);
+    font-size: 3vw;
 }
 
 .normal{
-
+    background-color: white;
+    color: black;
 }
 
 .img{
+    background-color: rgb(91, 91, 91);
     color: white;
+}
+
+.img > p{
+    background-color: rgba(0, 0, 0, 0.541);
+    display: inline-block;
+}
+
+#img01{
+    background-image: url(../imagens/background003.jpg.jpg);
+}
+
+#img02{
+    background-image: url(../imagens/background004.jpg);
 }
 
 footer{
     background-color: black;
     color: white;
     text-align: center;
-    padding: 2px;
+    padding: 5px;
 }
